[FIX] web_studio: correctly display sidebar titles
Since the new design, the titles are displayed in dark grey.
As the Studio sidebar is also dark grey, the titles were quite hard to read.

This commit restores the previous default color for titles in Studio.

--- a/web_studio/static/src/less/sidebar.less
+++ b/web_studio/static/src/less/sidebar.less
@@ -47,6 +47,10 @@
             margin-top: 0;
         }
 
+        > h3 {
+            color: white;
+        }
+
         > hr {
             border-color: @o-web-studio-bg-dark;
             border-width: 1px;
